force-app/main/default/objects/MachineClient__mdt/MachineClient__mdt.object-meta.xml
<CustomObject>
    <label>Machine Client</label>
    <pluralLabel>Machine Clients</pluralLabel>
</CustomObject>