force-app/main/default/objects/MachineClient__mdt/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>