force-app/main/default/objects/MachineClient__mdt/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>