force-app/main/default/objects/MachineClient__mdt/fields/GrantType__c.field-meta.xml
<CustomField>
    <fullName>GrantType__c</fullName>
    <label>Grant Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>