force-app/main/default/objects/MachineClient__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>GrantType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>